2010-05-09  Noel O'Boyle

	* CMakeLists.txt, scripts/CMakeLists.txt: The final step in getting the
	Python bindings ready for release - separating the running of SWIG from
	the compiling of the bindings. -DRUN_SWIG and -DPYTHON_BINDINGS are the
	relevant variables. If you try to compile the bindings and they are not
	present, the warning message recommends you use -DRUN_SWIG.

2010-05-07  Chris Morley

	* src/transform.cpp: Add option suggested by Noel:
	-r Remove all but the largest contiguous fragment
	(StripSalts)
	
2010-05-07  Noel O'Boyle

	* src/builder.cpp: Treat 2D structures like 0D structures.

2010-05-07  Noel O'Boyle

	* src/mol.cpp, include/openbabel/mol.h: Change OBMol::StripSalts() to
	remove all but the largest fragment if threshold is 0. Updated the
	docs.

2010-05-06  Noel O'Boyle

	* scripts/CMakeLists.txt: Place the SWIG-generated files in the
	source directory (TODO: Require -DRUN_SWIG for developers). Correct
	EQUAL to STREQUAL. Remove unnecessary soft link.

2010-05-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/tokenst.h: Add missing <sstream> header.

2010-05-06  Chris Morley

	* include/openbabel/tokenst.h: Add utility function toString()
	
	* src/formats/xml/xml.cpp: Use new reader when the input file
	changes, rather than resuing the old one. Was not working with
	input files with <?xml?> elements.
	
	* delete windows-vc2005 and windowsOBF which did not use CMake.
	  
2010-05-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/data.cpp: Add check for empty isotope rows (PR#2996661).

	* data/isotope.txt: Add some default isotopes for heavy elements
	up to element 118. Will need updates after next atomic mass
	evaluation.

2010-05-04  Jean Brefort  <jean.brefort@normalesup.org>

	* data/space-groups.txt: updated after group 205 Hall name fix.
	* src/math/scpaegroup.cpp: fixed group search for duplicate Hall names (grroups 3 and 68).

2010-04-28  Geoffrey Hutchison  <babel@geoffhutchison.net>
